fixed footer overflow

--- a/styles.css
+++ b/styles.css
@@ -347,10 +347,9 @@ h5 {
     text-align: center;
     color: #c0afbf;
     position: relative;
-    bottom: 0vh;
-    height: 13vh;
+    bottom: 0;
+    min-height: 13vh;
     width: 100%;
-    display: flexbox;
 }
 
 #footer p {
